hosts/macos/Sources/EivizMixer/eiviz_mixer.h

typedef struct EivizOverlayDesc {
    uint64_t source_id;
    EivizRect rect;
    EivizRect crop;
    float opacity;
    int32_t z;
    uint32_t audio_follow;
    uint32_t hidden;
    const char *label;
} EivizOverlayDesc;
typedef struct EivizUnitState {
    uint64_t program_source;
    uint64_t preview_source;
    float mix;
    uint32_t transition_kind;
    uint32_t overlay_count;
    uint32_t mv_slot_count;
    EivizOverlayDesc overlays[8];
    uint64_t mv_slots[16];
    uint32_t transition_easing;
    uint32_t transition_direction;
    uint32_t keep_preview;
    uint32_t pad;
    float dip_r;
    float dip_g;
    float dip_b;
    float dip_a;
    uint64_t incoming_source;
    float softness;
    float param;
} EivizUnitState;
typedef struct EivizSourceStatus {
    uint32_t connected;
    uint32_t has_video;
} EivizSourceStatus;
typedef struct EivizAudioDeviceInfo {
    uint32_t kind;
    uint32_t channels;
    uint8_t id[256];
    uint8_t name[256];
    uint32_t direction;
    uint32_t caps;
} EivizAudioDeviceInfo;
typedef struct EivizAudioBusInfo {
    uint64_t id;
    uint32_t role;
    uint32_t device_kind;
    int32_t map_left;
    int32_t map_right;
    uint32_t bit;
    uint8_t name[64];
    uint8_t device_id[256];
} EivizAudioBusInfo;
uint32_t mixer_ping(void);
int32_t mixer_create(uint64_t adapter_luid, uint32_t fps_num, uint32_t fps_den);
int32_t mixer_create_with_backend(uint32_t backend, uint64_t adapter_luid, uint32_t fps_num, uint32_t fps_den);
uint32_t mixer_backend(void);
void mixer_destroy(void);
int32_t mixer_create_unit(uint64_t unit_id, uint32_t width, uint32_t height);
int32_t mixer_destroy_unit(uint64_t unit_id);
int32_t mixer_unit_configure(uint64_t unit_id, uint32_t width, uint32_t height, uint32_t fps_num, uint32_t fps_den);
int32_t mixer_resize_monitor(uint64_t monitor_id, uint32_t width, uint32_t height);
int32_t mixer_detach_monitor(uint64_t monitor_id);
int32_t mixer_monitor_set_source(uint64_t monitor_id, uint64_t source_id);
int32_t mixer_unit_set_state(uint64_t unit_id, const EivizUnitState *state);
int32_t mixer_unit_get_state(uint64_t unit_id, EivizUnitState *out);
int32_t mixer_unit_cut(uint64_t unit_id, uint32_t swap, uint64_t incoming_source);
int32_t mixer_unit_auto(uint64_t unit_id, uint32_t kind, uint32_t duration_ms, uint32_t swap, uint32_t keep_preview, uint32_t easing, uint32_t direction, float dip_r, float dip_g, float dip_b, float dip_a, uint64_t incoming_source, float softness, float param);
int32_t mixer_unit_overlay_auto(uint64_t unit_id, uint32_t target_enabled, uint32_t duration_ms, const EivizOverlayDesc *desc);
int32_t mixer_unit_set_custom_wgsl(uint64_t unit_id, const char *wgsl);
int32_t mixer_validate_custom_wgsl(const char *wgsl);
int32_t mixer_register_source(uint64_t id, uint32_t width, uint32_t height, uint32_t format);
int32_t mixer_source_status(uint64_t id, EivizSourceStatus *out);
int32_t mixer_source_copy_error(uint64_t id, uint8_t *out, size_t cap);
int32_t mixer_destroy_source(uint64_t id);
int32_t mixer_flush_audio(uint64_t id);
int32_t mixer_audio_bus_upsert(uint64_t id, const char *name, uint32_t role, uint32_t device_kind, const char *device_id, int32_t map_left, int32_t map_right);
int32_t mixer_audio_bus_remove(uint64_t id);
int32_t mixer_audio_bus_count(void);
int32_t mixer_audio_bus_get(uint32_t index, EivizAudioBusInfo *out);
int32_t mixer_audio_set_input(uint64_t id, uint32_t bus_mask, float gain, uint32_t mute);
int32_t mixer_audio_set_bus_gain(uint64_t id, float gain, uint32_t mute);
int32_t mixer_audio_set_unit_link(uint64_t unit_id, uint64_t bus_id, uint32_t mode);
int32_t mixer_audio_set_headphone_cue(uint64_t unit_id);
int32_t mixer_audio_set_headphone_copy_master(uint32_t enabled);
int32_t mixer_audio_enum_devices(uint32_t kind, EivizAudioDeviceInfo *out, uint32_t cap);
int32_t mixer_audio_device_channels(uint32_t kind, const char *device_id);
int32_t mixer_audio_device_io_channels(uint32_t kind, const char *device_id, int32_t *inputs, int32_t *outputs);
int32_t mixer_audio_process_list(uint8_t *out, size_t cap);
int32_t mixer_audio_capture_start(uint64_t id, uint32_t kind, const char *device_id, uint32_t mode, int32_t map_left, int32_t map_right, const char *process_exe, const char *process_aumid);