hosts/win32/Interop/MixerNative.cs

using System.Runtime.InteropServices;
using System.Text;
using Eiviz.Host.I18n;

namespace Eiviz.Host.Interop;

internal static partial class MixerNative
{
    private const string LibraryName = "eiviz_mixer";

    internal const ulong Color = 1;
    internal const ulong Bars = 2;
    internal const ulong Black = 3;
    internal const ulong Blue = 4;
    internal const ulong IncomingPreview = 0;
    internal const ulong IncomingProgram = unchecked((ulong)-1);
    internal const ulong SceneBase = 0x0001_0000;
    internal const ulong MultiviewBase = 0x0002_0000;
    internal const ulong LabelBase = 0x0003_0000;
    internal const ulong AudioBusPeakBase = 0x0004_0000UL;
    internal const uint OutputProgram = 0;
    internal const uint OutputPreview = 1;
    internal const uint OutputSource = 3;
    internal const uint TransitionCut = 0;
    internal const uint TransitionFade = 1;
    internal const uint TransitionDip = 2;
    internal const uint TransitionWipe = 3;
    internal const uint TransitionSlide = 4;
    internal const uint TransitionPush = 5;
    internal const uint TransitionIris = 6;
    internal const uint TransitionBlinds = 7;
    internal const uint TransitionZoom = 8;
    internal const uint TransitionAdditive = 9;
    internal const uint TransitionCube = 10;
    internal const uint TransitionCrossZoom = 11;
    internal const uint TransitionFlyRotate = 12;
    internal const uint TransitionBarnDoor = 13;
    internal const uint TransitionClock = 14;
    internal const uint TransitionLorez = 15;
    internal const uint TransitionMetamix = 16;
    internal const uint TransitionTile = 17;
    internal const uint TransitionFlip = 18;
    internal const uint TransitionGlitch = 19;
    internal const uint TransitionSwirl = 20;
    internal const uint TransitionLumaMorph = 21;
    internal const uint TransitionParts = 22;
    internal const uint TransitionStatic = 23;
    internal const uint TransitionShiftRgb = 24;
    internal const uint TransitionDisplace = 25;
    internal const uint TransitionRipple = 26;
    internal const uint TransitionGridDissolve = 27;
    internal const uint TransitionCubeZoom = 28;
    internal const uint TransitionPageCurl = 29;
    internal const uint TransitionKaleidoscope = 30;
    internal const uint TransitionPolar = 31;
    internal const uint TransitionFilmBurn = 32;
    internal const uint TransitionZoomBlur = 33;
    internal const uint TransitionMultitask = 34;
    internal const uint TransitionHeart = 35;
    internal const uint TransitionDiamond = 36;
    internal const uint TransitionStar = 37;
    internal const uint TransitionRollerDoor = 38;
    internal const uint TransitionPixelSort = 39;
    internal const uint TransitionDatamosh = 40;
    internal const uint TransitionVisualDissolve = 41;
    internal const uint TransitionOpticalFlow = 42;
    internal const uint TransitionBloom = 43;
    internal const uint TransitionCustom = 50;
    internal const uint TransitionStinger = 100;
    internal const uint DurationFrames = 0;
    internal const uint DurationMs = 1;
    internal const uint EasingLinear = 0;
    internal const uint EasingIn = 1;
    internal const uint EasingOut = 2;
    internal const uint EasingInOut = 3;
    internal const uint EasingSmoothstep = 4;

    internal static string TransitionLabel(uint kind) => TransitionCatalog.Label(kind);
    internal const int ErrBufferTooSmall = 6;
    internal const uint FormatUyvy = 0;
    internal const uint FormatBgra = 1;
    internal const uint FormatRgba = 3;
    internal const uint OutOmt = 0;
    internal const uint OutNdi = 1;
    internal const uint OutDeckLink = 2;
    internal const uint SrcKindScene = 0;
    internal const uint SrcKindMuPreview = 1;
    internal const uint SrcKindMuProgram = 2;
    internal const uint SrcKindMuMultiview = 3;
    internal const uint SrcKindInput = 4;
    internal const uint GenSolid = 0;
    internal const uint GenBars = 1;
    internal const uint SaveAlwaysLow = 0;
    internal const uint SaveNotOnProgram = 1;
    internal const uint SaveNotOnPreviewOrProgram = 2;
    internal const uint SaveAlwaysFull = 3;
    internal const uint SaveFlagMultiview = 1;
    internal const ulong MuSourceFlag = 0x8000_0000_0000_0000UL;
    internal const ulong MuBusPreview = 0x1000_0000_0000_0000UL;
    internal const ulong MuIdMask = 0x0FFF_FFFF_FFFF_FFFFUL;
    internal static uint VideoFormat = FormatUyvy;

    internal static float MixerGain(float gain) => gain < 0f ? 1f : gain;

    internal static ulong SceneGpuId(ulong sceneId) => SceneBase | sceneId;
    internal static ulong MultiviewGpuId(ulong layoutId) => MultiviewBase | layoutId;
    internal static ulong MuProgram(ulong unitId) => MuSourceFlag | (unitId & MuIdMask);
    internal static ulong MuPreview(ulong unitId) => MuSourceFlag | MuBusPreview | (unitId & MuIdMask);

    [LibraryImport(LibraryName, EntryPoint = "mixer_ping")]
    internal static partial uint Ping();

    [LibraryImport(LibraryName, EntryPoint = "mixer_create")]
    internal static partial int Create(ulong adapterLuid, uint fpsNumerator, uint fpsDenominator);

    [LibraryImport(LibraryName, EntryPoint = "mixer_create_with_backend")]
    internal static partial int CreateWithBackend(uint backend, ulong adapterLuid, uint fpsNumerator, uint fpsDenominator);

    [LibraryImport(LibraryName, EntryPoint = "mixer_backend")]
    internal static partial uint Backend();

    [LibraryImport(LibraryName, EntryPoint = "mixer_destroy")]
    internal static partial void Destroy();

    [LibraryImport(LibraryName, EntryPoint = "mixer_create_unit")]
    internal static partial int CreateUnit(ulong unitId, uint width, uint height);

    [LibraryImport(LibraryName, EntryPoint = "mixer_destroy_unit")]
    internal static partial int DestroyUnit(ulong unitId);

    [LibraryImport(LibraryName, EntryPoint = "mixer_unit_configure")]
    internal static partial int ConfigureUnit(ulong unitId, uint width, uint height, uint fpsNum, uint fpsDen);

    [LibraryImport(LibraryName, EntryPoint = "mixer_unit_attach_output")]
    internal static partial int AttachOutput(ulong unitId, nint hwnd, uint width, uint height, uint kind);

    [LibraryImport(LibraryName, EntryPoint = "mixer_unit_resize_output")]
    internal static partial int ResizeOutput(ulong unitId, uint kind, nint hwnd, uint width, uint height);

    [LibraryImport(LibraryName, EntryPoint = "mixer_unit_detach_output")]
    internal static partial int DetachOutput(ulong unitId, uint kind, nint hwnd);

    [LibraryImport(LibraryName, EntryPoint = "mixer_attach_monitor")]
    internal static partial int AttachMonitor(ulong monitorId, ulong sourceId, nint hwnd, uint width, uint height);

    [LibraryImport(LibraryName, EntryPoint = "mixer_resize_monitor")]
    internal static partial int ResizeMonitor(ulong monitorId, uint width, uint height);

    [LibraryImport(LibraryName, EntryPoint = "mixer_detach_monitor")]
    internal static partial int DetachMonitor(ulong monitorId);

    [LibraryImport(LibraryName, EntryPoint = "mixer_monitor_set_source")]
    internal static partial int SetMonitorSource(ulong monitorId, ulong sourceId);

    [LibraryImport(LibraryName, EntryPoint = "mixer_unit_set_state")]
    internal static unsafe partial int SetUnitState(ulong unitId, UnitState* state);

    [LibraryImport(LibraryName, EntryPoint = "mixer_unit_get_state")]
    internal static unsafe partial int GetUnitState(ulong unitId, UnitState* state);

    [LibraryImport(LibraryName, EntryPoint = "mixer_unit_cut")]
    internal static partial int Cut(ulong unitId, uint swap, ulong incomingSource);

    [LibraryImport(LibraryName, EntryPoint = "mixer_unit_auto")]
    internal static partial int Auto(
        ulong unitId,
        uint kind,
        uint durationMs,
        uint swap,
        uint keepPreview,
        uint easing,
        uint direction,
        float dipR,
        float dipG,
        float dipB,
        float dipA,
        ulong incomingSource,
        float softness,
        float param);

    [LibraryImport(LibraryName, EntryPoint = "mixer_unit_overlay_auto")]
    internal static unsafe partial int OverlayAuto(ulong unitId, uint targetEnabled, uint durationMs, OverlayDesc* desc);

    [LibraryImport(LibraryName, EntryPoint = "mixer_unit_set_custom_wgsl", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int SetCustomWgsl(ulong unitId, string? wgsl);

    [LibraryImport(LibraryName, EntryPoint = "mixer_validate_custom_wgsl", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int ValidateCustomWgsl(string? wgsl);

    [LibraryImport(LibraryName, EntryPoint = "mixer_register_source")]
    internal static partial int RegisterSource(ulong id, uint width, uint height, uint format);

    [LibraryImport(LibraryName, EntryPoint = "mixer_source_status")]
    internal static unsafe partial int SourceStatus(ulong id, MixerSourceStatus* status);

    [LibraryImport(LibraryName, EntryPoint = "mixer_source_copy_error")]
    internal static unsafe partial int SourceCopyError(ulong id, byte* buffer, nuint capacity);

    [LibraryImport(LibraryName, EntryPoint = "mixer_destroy_source")]
    internal static partial int DestroySource(ulong id);

    [LibraryImport(LibraryName, EntryPoint = "mixer_flush_audio")]
    internal static partial int FlushAudio(ulong id);

    [LibraryImport(LibraryName, EntryPoint = "mixer_audio_bus_upsert", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int AudioBusUpsert(ulong id, string name, uint role, uint deviceKind, string deviceId, int mapLeft, int mapRight);

    [LibraryImport(LibraryName, EntryPoint = "mixer_audio_bus_remove")]
    internal static partial int AudioBusRemove(ulong id);

    [LibraryImport(LibraryName, EntryPoint = "mixer_audio_bus_count")]
    internal static partial int AudioBusCount();

    [LibraryImport(LibraryName, EntryPoint = "mixer_audio_bus_get")]
    internal static unsafe partial int AudioBusGet(uint index, MixerAudioBusInfo* info);

    [LibraryImport(LibraryName, EntryPoint = "mixer_audio_set_input")]
    internal static partial int AudioSetInput(ulong id, uint busMask, float gain, uint mute);

    [LibraryImport(LibraryName, EntryPoint = "mixer_audio_set_bus_gain")]
    internal static partial int AudioSetBusGain(ulong id, float gain, uint mute);

    [LibraryImport(LibraryName, EntryPoint = "mixer_audio_set_unit_link")]
    internal static partial int AudioSetUnitLink(ulong unitId, ulong busId, uint mode);

    [LibraryImport(LibraryName, EntryPoint = "mixer_audio_set_headphone_cue")]
    internal static partial int AudioSetHeadphoneCue(ulong unitId);

    [LibraryImport(LibraryName, EntryPoint = "mixer_audio_set_headphone_copy_master")]
    internal static partial int AudioSetHeadphoneCopyMaster(uint enabled);

    [LibraryImport(LibraryName, EntryPoint = "mixer_audio_enum_devices")]
    internal static unsafe partial int AudioEnumDevices(uint kind, MixerAudioDeviceInfo* devices, uint capacity);

    [LibraryImport(LibraryName, EntryPoint = "mixer_audio_device_channels", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int AudioDeviceChannels(uint kind, string deviceId);

    [LibraryImport(LibraryName, EntryPoint = "mixer_audio_device_io_channels", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int AudioDeviceIoChannels(uint kind, string deviceId, out int inputs, out int outputs);

    [LibraryImport(LibraryName, EntryPoint = "mixer_audio_process_list")]
    internal static unsafe partial int AudioProcessList(byte* buffer, nuint capacity);

    [LibraryImport(LibraryName, EntryPoint = "mixer_audio_capture_start", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int AudioCaptureStart(
        ulong id,
        uint kind,
        string deviceId,
        uint mode,
        int mapLeft,
        int mapRight,
        string processExe,
        string processAumid);
